// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openapi burn only 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_latestStatus": "checkpointed",
  "_openapiBurnTxStatus": "checkpointed",
  "_txSource": "openapi_burns",
  "_txType": "withdraw",
  "amount": "13000",
  "blockNumber": 21817279,
  "childToken": "0xchildToken",
  "isPoS": true,
  "timestamp": 1637919853,
  "tokenType": "ERC20",
  "txHash": "0xburnTxHash_1",
  "txStatus": "checkpointed",
  "userAddress": "0xfrom",
}
`;

exports[`openapi burn, openapi exit 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_exitTxHash": "0xexitHash_1",
  "_latestStatus": "exited",
  "_openapiBurnTxStatus": "checkpointed",
  "_openapiExitTxStatus": "exited",
  "_txSource": "openapi_exits",
  "_txType": "exit",
  "amount": "9857406270252014820230",
  "blockNumber": 13937154,
  "burnTxTimestamp": "2022-01-04T04:46:35.000Z",
  "childToken": "0xchildToken",
  "counter": 185187,
  "isPoS": true,
  "rootToken": "0xrootToken",
  "timestamp": 1641275112,
  "tokenType": "ERC20",
  "txBurnHash": "0xburnTxHash_1",
  "txHash": "0xexitHash_1",
  "txStatus": "exited",
  "userAddress": "0xfrom",
}
`;

exports[`openapi exit only 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_exitTxHash": "0xexitHash_1",
  "_latestStatus": "exited",
  "_openapiExitTxStatus": "exited",
  "_txSource": "openapi_exits",
  "_txType": "exit",
  "amount": "9857406270252014820230",
  "blockNumber": 13937154,
  "burnTxTimestamp": "2022-01-04T04:46:35.000Z",
  "childToken": "0xchildToken",
  "counter": 185187,
  "isPoS": true,
  "rootToken": "0xrootToken",
  "timestamp": 1641275112,
  "tokenType": "ERC20",
  "txBurnHash": "0xburnTxHash_1",
  "txHash": "0xexitHash_1",
  "txStatus": "exited",
  "userAddress": "0xfrom",
}
`;

exports[`watchgod burn and openapi burn 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_latestStatus": "checkpointed",
  "_openapiBurnTxStatus": "checkpointed",
  "_txSource": "openapi_burns",
  "_txType": "withdraw",
  "_watchgodBurnTxStatus": "confirmed",
  "amount": "13000",
  "blockNumber": 21817279,
  "childToken": "0xchildToken",
  "isPoS": true,
  "timestamp": 1637919853,
  "tokenType": "ERC20",
  "txHash": "0xburnTxHash_1",
  "txStatus": "checkpointed",
  "userAddress": "0xfrom",
}
`;

exports[`watchgod burn only 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_latestStatus": "confirmed",
  "_txSource": "watchgod_burns",
  "_txType": "withdraw",
  "_watchgodBurnTxStatus": "confirmed",
  "amount": "13000",
  "blockNumber": 21817279,
  "data": "0xdata",
  "from": "0xfrom",
  "network": "matic-main",
  "rootToken": "0xrootToken",
  "timestamp": 1637919854103,
  "to": "0xto_1",
  "txBurnHash": null,
  "txHash": "0xburnTxHash_1",
  "txStatus": "confirmed",
  "txType": "withdraw",
}
`;

exports[`watchgod burn, openapi burn, watchgod exit 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_exitTxHash": "0xexitHash_1",
  "_latestStatus": "confirmed",
  "_openapiBurnTxStatus": "checkpointed",
  "_txSource": "watchgod_exits",
  "_txType": "exit",
  "_watchgodBurnTxStatus": "confirmed",
  "_watchgodExitTxStatus": "confirmed",
  "amount": "13000",
  "blockNumber": 13689313,
  "data": "0xdata",
  "from": "0xfrom",
  "network": "main",
  "rootToken": "0xrootToken",
  "timestamp": 1637924277824,
  "to": "0xto_1",
  "txBurnHash": "0xburnTxHash_1",
  "txHash": "0xexitHash_1",
  "txStatus": "confirmed",
  "txType": "exit",
}
`;

exports[`watchgod burn, openapi burn, watchgod exit, openapi exit 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_exitTxHash": "0xexitHash_1",
  "_latestStatus": "exited",
  "_openapiBurnTxStatus": "checkpointed",
  "_openapiExitTxStatus": "exited",
  "_txSource": "openapi_exits",
  "_txType": "exit",
  "_watchgodBurnTxStatus": "confirmed",
  "_watchgodExitTxStatus": "confirmed",
  "amount": "9857406270252014820230",
  "blockNumber": 13937154,
  "burnTxTimestamp": "2022-01-04T04:46:35.000Z",
  "childToken": "0xchildToken",
  "counter": 185187,
  "isPoS": true,
  "rootToken": "0xrootToken",
  "timestamp": 1641275112,
  "tokenType": "ERC20",
  "txBurnHash": "0xburnTxHash_1",
  "txHash": "0xexitHash_1",
  "txStatus": "exited",
  "userAddress": "0xfrom",
}
`;

exports[`watchgod burn, openapi exit 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_exitTxHash": "0xexitHash_1",
  "_latestStatus": "exited",
  "_openapiExitTxStatus": "exited",
  "_txSource": "openapi_exits",
  "_txType": "exit",
  "_watchgodBurnTxStatus": "confirmed",
  "amount": "9857406270252014820230",
  "blockNumber": 13937154,
  "burnTxTimestamp": "2022-01-04T04:46:35.000Z",
  "childToken": "0xchildToken",
  "counter": 185187,
  "isPoS": true,
  "rootToken": "0xrootToken",
  "timestamp": 1641275112,
  "tokenType": "ERC20",
  "txBurnHash": "0xburnTxHash_1",
  "txHash": "0xexitHash_1",
  "txStatus": "exited",
  "userAddress": "0xfrom",
}
`;

exports[`watchgod exit only 1`] = `
Object {
  "_burnTxHash": "0xburnTxHash_1",
  "_exitTxHash": "0xexitHash_1",
  "_latestStatus": "confirmed",
  "_txSource": "watchgod_exits",
  "_txType": "exit",
  "_watchgodExitTxStatus": "confirmed",
  "amount": "13000",
  "blockNumber": 13689313,
  "data": "0xdata",
  "from": "0xfrom",
  "network": "main",
  "rootToken": "0xrootToken",
  "timestamp": 1637924277824,
  "to": "0xto_1",
  "txBurnHash": "0xburnTxHash_1",
  "txHash": "0xexitHash_1",
  "txStatus": "confirmed",
  "txType": "exit",
}
`;
